# atomic_bitfield

./: Cargo.toml  README.md
src/: lib.rs  test.rs
