[package]
name = "atomic_bitfield"
version = "0.1.0"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A bitfield abstraction for the core atomic types."
repository = "https://github.com/amiraeva/atomic_bitfield.git"
documentation = "https://doc.rs/atomic_bitfield"

[features]
default = []
nightly = []

[dependencies]
bit_field = "0.9"
cfg-if = "0.1"

[dev-dependencies]
quickcheck = "0.8"
